Calculator working, w some styling

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -8,12 +8,19 @@
 <body>
 
 <div id="main">
-	<div class="card" style="background: black"></div>
-	<div class="card" ></div>
-	<div class="card" style="background: black"></div>
-	<div class="card" style="background: black"></div>
-	<div class="card" ></div>
-	<h2 id="total">Total: </h2>
+	<div id="deck">
+		<div class="card white" data-slot="9">512</div>
+		<div class="card white" data-slot="8">256</div>
+		<div class="card white" data-slot="7">128</div>
+		<div class="card white" data-slot="6">64</div>
+		<div class="card white" data-slot="5">32</div>
+		<div class="card white" data-slot="4">16</div>
+		<div class="card white" data-slot="3">8</div>
+		<div class="card white" data-slot="2">4</div>
+		<div class="card white" data-slot="1">2</div>
+		<div class="card white" data-slot="0">1</div>
+	</div>
+	<h2 id="total">0</h2>
 </div>
 	    <script type="text/javascript" src="calculator.js"></script>
 
