--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -9,16 +9,46 @@
 
 <div id="main">
 	<div id="deck">
-		<div class="card white" data-slot="9">512</div>
-		<div class="card white" data-slot="8">256</div>
-		<div class="card white" data-slot="7">128</div>
-		<div class="card white" data-slot="6">64</div>
-		<div class="card white" data-slot="5">32</div>
-		<div class="card white" data-slot="4">16</div>
-		<div class="card white" data-slot="3">8</div>
-		<div class="card white" data-slot="2">4</div>
-		<div class="card white" data-slot="1">2</div>
-		<div class="card white" data-slot="0">1</div>
+		<div class="card_frame">
+			<div class="card white" data-slot="9">512</div>
+			<h3 style="float: left">0</h3>
+		</div>
+		<div class="card_frame">
+			<div class="card white" data-slot="8">256</div>
+			<h3 style="float: left">0</h3>
+		</div>
+		<div class="card_frame">
+			<div class="card white" data-slot="7">128</div>
+			<h3 style="float: left">0</h3>
+		</div>
+		<div class="card_frame">		
+			<div class="card white" data-slot="6">64</div>
+			<h3 style="float: left">0</h3>
+		</div>
+		<div class="card_frame">		
+			<div class="card white" data-slot="5">32</div>
+			<h3 style="float: left">0</h3>
+		</div>
+		<div class="card_frame">		
+			<div class="card white" data-slot="4">16</div>
+			<h3 style="float: left">0</h3>
+		</div>
+		<div class="card_frame">		
+			<div class="card white" data-slot="3">8</div>
+			<h3 style="float: left">0</h3>
+		</div>
+		<div class="card_frame">		
+			<div class="card white" data-slot="2">4</div>
+			<h3 style="float: left">0</h3>
+		</div>
+		<div class="card_frame">		
+			<div class="card white" data-slot="1">2</div>
+			<h3 style="float: left">0</h3>
+		</div>
+		<div class="card_frame">		
+			<div class="card white" data-slot="0">1</div>
+			<h3 style="float: left">0</h3>
+		</div>
 	</div>
 	<h2 id="total">0</h2>
 </div>
